export const snapshot = {};

snapshot[`should return correct react component. 1`] = `
'import React, { memo, PropsWithChildren } from "react";
export interface LoremIpsumProps {}

const LoremIpsum = (({}: PropsWithChildren<LoremIpsumProps>) => {
  return <>LoremIpsum</>;
});

export default memo(LoremIpsum);
'
`;

snapshot[`should return correct react component. 2`] = `
'import React, { forwardRef, memo } from "react";

type RefElement = HTMLDivElement;
type RefElementProps = React.HTMLAttributes<HTMLDivElement>;

export interface LoremIpsumProps extends RefElementProps {}

const LoremIpsum = forwardRef<RefElement, LoremIpsumProps>((props, ref) => {
  return <div ref={ref} {...props}>Lorem Ipsum</div>;
});

export default memo(LoremIpsum)

LoremIpsum.displayName = "LoremIpsum";
'
`;

snapshot[`should return correct react component. 3`] = `
'import React, { memo, PropsWithChildren } from "react";
export interface LoremIpsumProps {}

const LoremIpsum = (({}: PropsWithChildren<LoremIpsumProps>) => {
  return <>LoremIpsum</>;
});

export { LoremIpsum: memo(LoremIpsum) };
'
`;

snapshot[`should return correct react component. 4`] = `
'import React, { forwardRef, memo } from "react";

type RefElement = HTMLDivElement;
type RefElementProps = React.HTMLAttributes<HTMLDivElement>;

export interface LoremIpsumProps extends RefElementProps {}

const LoremIpsum = forwardRef<RefElement, LoremIpsumProps>((props, ref) => {
  return <div ref={ref} {...props}>Lorem Ipsum</div>;
});

export { LoremIpsum: memo(LoremIpsum) }

LoremIpsum.displayName = "LoremIpsum";
'
`;
